--- a/documentation/main.html
+++ b/documentation/main.html
@@ -1,19 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
-    
 
-    <h1>Seatin Engine Documentation</h1>
-    <iframe id="main_frame" frameborder="0"></iframe>
+
+    <h1 class="title">Seatin Engine Documentation</h1>
+
+    <div class="page-div">
+
+        <div class="scrollable-div-container">
+            <div class="scrollable-div">
+                <!-- Seus elementos dentro da div -->
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <p>Elemento 1</p>
+                <p>Elemento 2</p>
+                <p>Elemento 3</p>
+                <!-- Adicione mais elementos conforme necessário -->
+            </div>
+        </div>
+
+        <iframe id="main_frame" frameborder="0"></iframe>
+
+    </div>
 
     <link rel="stylesheet" href="style.css">
     <script src="src/fake_router.js"></script>
-    
+
 </body>
+
 </html>
