--- a/documentation/pages/hello.html
+++ b/documentation/pages/hello.html
@@ -9,71 +9,7 @@
 
 <body>
 
-    <h1>HELLO</h1>
-
-    <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
-            <p>Elemento 1</p>
-            <p>Elemento 2</p>
-            <p>Elemento 3</p>
+    <h1>Welcome to the Ceatin Engine</h1>
 
     <link rel="stylesheet" href="../style.css">
 
