--- a/documentation/main.html
+++ b/documentation/main.html
@@ -19,6 +19,7 @@
             <div class="scrollable-div">
                 <h1 class="scrollable-div-title">Topics</h1>
                 <p><button id="hello" class="scrollable-div-button">hello</button><br></p>
+                <p><button id="guide_lines" class="scrollable-div-button">guide lines</button><br></p>
             </div>
         </div>
 
@@ -27,7 +28,7 @@
     </div>
 
     <link rel="stylesheet" href="style.css">
-    <script src="src/fake_router.js"></script>
+    <script src="./src/fake_router.js"></script>
 
 </body>
 
